sample data working

--- a/baci_preparation/baci_readin exports_gdp.ipynb
+++ b/baci_preparation/baci_readin exports_gdp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,9 +274,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Exporter</th>\n",
+       "      <th>Exports</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>644277.578</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>780453.092</td>\n",
+       "      <td>1996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>426</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>977245.673</td>\n",
+       "      <td>1997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>639</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>648281.421</td>\n",
+       "      <td>1998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>852</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>891851.146</td>\n",
+       "      <td>1999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5326</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>4562434.495</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5552</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>4080996.343</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5778</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>4362891.750</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6004</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>7861151.625</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6230</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>8412561.365</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6231 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Exporter      Exports  Year\n",
+       "0         ABW   644277.578  1995\n",
+       "213       ABW   780453.092  1996\n",
+       "426       ABW   977245.673  1997\n",
+       "639       ABW   648281.421  1998\n",
+       "852       ABW   891851.146  1999\n",
+       "...       ...          ...   ...\n",
+       "5326      ZWE  4562434.495  2018\n",
+       "5552      ZWE  4080996.343  2019\n",
+       "5778      ZWE  4362891.750  2020\n",
+       "6004      ZWE  7861151.625  2021\n",
+       "6230      ZWE  8412561.365  2022\n",
+       "\n",
+       "[6231 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def BACI_through_time():\n",
     "    years = np.arange(start=1995, stop=2023)\n",
@@ -304,12 +424,16 @@
     "    return data1\n",
     "    \n",
     "#data1 = BACI_through_time()\n",
-    "tradedata = data1.sort_values(['Exporter', 'Year'], ascending=True)\n"
+    "data1 = pd.read_csv(\"tmp_gdp_exports2.csv\")\n",
+    "data1.drop(columns={\"Exporters\"}, inplace = True)\n",
+    "\n",
+    "tradedata = data1.sort_values(['Exporter', 'Year'], ascending=True)\n",
+    "tradedata\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +563,7 @@
        "[16821 rows x 4 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,18 +587,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country_Year</th>\n",
+       "      <th>Exports</th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>ABW_1995</td>\n",
+       "      <td>644277.578</td>\n",
+       "      <td>1.320670e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>ABW_1996</td>\n",
+       "      <td>780453.092</td>\n",
+       "      <td>1.379888e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>ABW_1997</td>\n",
+       "      <td>977245.673</td>\n",
+       "      <td>1.531844e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>ABW_1998</td>\n",
+       "      <td>648281.421</td>\n",
+       "      <td>1.665363e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>ABW_1999</td>\n",
+       "      <td>891851.146</td>\n",
+       "      <td>1.722905e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5728</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>ZWE_2018</td>\n",
+       "      <td>4562434.495</td>\n",
+       "      <td>3.415607e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5729</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>ZWE_2019</td>\n",
+       "      <td>4080996.343</td>\n",
+       "      <td>2.183223e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5730</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>ZWE_2020</td>\n",
+       "      <td>4362891.750</td>\n",
+       "      <td>2.150970e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5731</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>ZWE_2021</td>\n",
+       "      <td>7861151.625</td>\n",
+       "      <td>2.837124e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5732</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>ZWE_2022</td>\n",
+       "      <td>8412561.365</td>\n",
+       "      <td>2.736663e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5733 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country  Year Country_Year      Exports           GDP\n",
+       "0        ABW  1995     ABW_1995   644277.578  1.320670e+09\n",
+       "1        ABW  1996     ABW_1996   780453.092  1.379888e+09\n",
+       "2        ABW  1997     ABW_1997   977245.673  1.531844e+09\n",
+       "3        ABW  1998     ABW_1998   648281.421  1.665363e+09\n",
+       "4        ABW  1999     ABW_1999   891851.146  1.722905e+09\n",
+       "...      ...   ...          ...          ...           ...\n",
+       "5728     ZWE  2018     ZWE_2018  4562434.495  3.415607e+10\n",
+       "5729     ZWE  2019     ZWE_2019  4080996.343  2.183223e+10\n",
+       "5730     ZWE  2020     ZWE_2020  4362891.750  2.150970e+10\n",
+       "5731     ZWE  2021     ZWE_2021  7861151.625  2.837124e+10\n",
+       "5732     ZWE  2022     ZWE_2022  8412561.365  2.736663e+10\n",
+       "\n",
+       "[5733 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tradedata['Country_Year'] = tradedata['Exporters'] + \"_\" + tradedata['Year'].astype('str')\n",
+    "tradedata['Country_Year'] = tradedata['Exporter'] + \"_\" + tradedata['Year'].astype('str')\n",
     "\n",
     "tradedata2 = tradedata.merge(GDP1, left_on=\"Country_Year\", right_on=\"Country_Year\")\n",
-    "tradedata2.drop(columns=['Year_y', 'Exporters'], inplace = True)\n",
+    "tradedata2.drop(columns=['Year_y', 'Exporter'], inplace = True)\n",
     "tradedata2.rename(columns={\"Year_x\": \"Year\"}, inplace=True)\n",
     "\n",
     "tradedata = tradedata2.iloc[:, [3,1,2,0,4]]\n",
-    "tradedata.to_csv(\"data/tradedata_Exports_GDP.csv\")\n"
+    "tradedata.to_csv(\"data/tradedata_Exports_GDP.csv\")\n",
+    "tradedata\n"
    ]
   }
  ],
